--- a/app/src/main/res/layout/card_view_row_hotel.xml
+++ b/app/src/main/res/layout/card_view_row_hotel.xml
@@ -9,9 +9,15 @@
         xmlns:cardview="http://schemas.android.com/apk/res-auto"
         android:id="@+id/YogaCard"
         android:layout_width="fill_parent"
+        card_view:cardElevation="0dp"
+        card_view:cardMaxElevation="0dp"
+        card_view:cardCornerRadius="0dp"
+        card_view:cardPreventCornerOverlap="false"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="1dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="1dp"
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground">
 
@@ -61,7 +67,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_margin="8dp"
                     android:layout_weight="1.7"
-                    android:background="@drawable/cross" />
+                    android:background="@android:drawable/ic_delete" />
             </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
