--- a/app/src/main/res/layout/card_view_row_orders.xml
+++ b/app/src/main/res/layout/card_view_row_orders.xml
@@ -7,12 +7,18 @@
 
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:cardview="http://schemas.android.com/apk/res-auto"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/YogaCard"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="8dp"
+        card_view:cardPreventCornerOverlap="false"
+        android:layout_height="wrap_content"
+        card_view:cardElevation="0dp"
+        card_view:cardMaxElevation="0dp"
+        card_view:cardCornerRadius="0dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="1dp"
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground">
 
