--- a/app/src/main/res/layout/card_view_row_orders.xml
+++ b/app/src/main/res/layout/card_view_row_orders.xml
@@ -10,60 +10,52 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/YogaCard"
         android:layout_width="fill_parent"
-        android:layout_gravity="center"
-        card_view:cardPreventCornerOverlap="false"
         android:layout_height="wrap_content"
-        card_view:cardElevation="0dp"
-        card_view:cardMaxElevation="0dp"
-        card_view:cardCornerRadius="0dp"
+        android:layout_gravity="center"
+        android:layout_marginBottom="1dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="1dp"
         android:clickable="true"
-        android:foreground="?android:attr/selectableItemBackground">
+        android:foreground="?android:attr/selectableItemBackground"
+        card_view:cardCornerRadius="0dp"
+        card_view:cardElevation="0dp"
+        card_view:cardMaxElevation="0dp"
+        card_view:cardPreventCornerOverlap="false">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:weightSum="2">
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:weightSum="7">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="horizontal"
-                android:weightSum="7">
+            <TextView
+                android:id="@+id/id"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="3"
+                android:gravity="center_vertical"
+                android:paddingLeft="10dp"
+                android:textSize="15sp" />
 
-                <TextView
-                    android:id="@+id/id"
-                    android:layout_width="0dp"
-                    android:layout_height="50dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="3"
-                    android:gravity="center_vertical"
-                    android:paddingLeft="10dp"
-                    android:textSize="15sp" />
+            <TextView
+                android:id="@+id/title1"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:layout_weight="2"
+                android:gravity="center"
+                android:textSize="15sp" />
 
-                <TextView
-                    android:id="@+id/title1"
-                    android:layout_width="0dp"
-                    android:layout_height="50dp"
-                    android:layout_gravity="center"
-                    android:layout_weight="3"
-                    android:gravity="center"
-                    android:paddingLeft="10dp"
-                    android:textSize="15sp" />
-
-                <TextView
-                    android:id="@+id/price"
-                    android:layout_width="0dp"
-                    android:layout_height="50dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:textSize="15sp" />
-            </LinearLayout>
+            <TextView
+                android:id="@+id/price"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="2"
+                android:gravity="center"
+                android:textSize="15sp" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
