--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -1,42 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <include
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
 
     <EditText
+        android:id="@+id/title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/title"
         android:layout_gravity="center_horizontal"
         android:layout_margin="15dp"
         android:hint="Name" />
 
     <EditText
+        android:id="@+id/pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/pass"
-        android:inputType="textPassword"
         android:layout_gravity="center_horizontal"
         android:layout_margin="15dp"
-        android:hint="Password" />
+        android:hint="Password"
+        android:inputType="textPassword" />
 
     <Button
-        android:layout_width="match_parent"
-        android:layout_margin="20dp"
-        android:layout_height="50dp"
-        android:text="Login"
         android:id="@+id/post"
+        style="@style/Widget.AppCompat.Button.Colored"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         android:layout_gravity="center_horizontal"
-        style="@style/Widget.AppCompat.Button.Colored" />
+        android:layout_margin="20dp"
+        android:text="Login" />
 
     <ProgressBar
+        android:id="@+id/progressBar3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/progressBar3"
         android:layout_gravity="center_horizontal"
         android:visibility="gone" />
 </LinearLayout>
