merchant order history

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,14 @@
         android:clickable="true"
         style="@style/MyMaterialTheme.SettingsButton" />
 
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Order History"
+        android:id="@+id/history"
+        android:clickable="true"
+        style="@style/MyMaterialTheme.SettingsButton" />
+
 <!--    <ToggleButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
