--- a/app/src/main/res/layout/perorder.xml
+++ b/app/src/main/res/layout/perorder.xml
@@ -148,14 +148,15 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:divider="@null"
-        android:layout_marginTop="20dp"></ListView>
+        android:layout_marginTop="20dp"
+        android:divider="@null"></ListView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:orientation="horizontal"
+        android:id="@+id/optionsLayout"
         android:weightSum="3">
 
         <Button
