--- a/app/src/main/res/layout/perorder.xml
+++ b/app/src/main/res/layout/perorder.xml
@@ -56,6 +56,14 @@
                     android:layout_marginTop="10dp"
                     android:text="phone number"
                     android:textSize="15sp" />
+
+                <TextView
+                    android:id="@+id/time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="time"
+                    android:textSize="15sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -123,6 +131,15 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.6"
+                android:text="ItemId"
+                android:textColor="@color/colorAccent"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.6"
                 android:text="Amt(₹)"
                 android:textColor="@color/colorAccent"
                 android:textSize="14sp"
@@ -181,7 +198,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Deliver" />
+            android:text="Confirm" />
 
     </LinearLayout>
 
